my-yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  revisionHistoryLimit: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        environment: dev
        tier: backend
        department: engineering
      annotations:
        kubernetes.io/change-cause: "amigoscode/kubernetes:hello-world-v4"
    spec:
      containers:
        - name: hello-world
          image: amv4igoscode/kubernetes:hello-world-
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
