my-yamls/jenkins-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-cicd
  labels:
    name: jenkins-cicd
    app: cicd
spec:
  containers:
  - name: jenkins-cicd
    image: jenkins/jenkins:lts
    ports:
      - containerPort: 8080
        hostPort: 8091
    volumeMounts:
      - name: jenkins-data
        mountPath: /var/jenkins_home
  volumes:
  - name: jenkins-data
    emptyDir: {}


#kubectl logs jenkins-cicd
