my-yamls/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  #namespace: engineering
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
        environment: test
        tier: backend
        department: engineering
    spec:
      containers:
        - name: customer
          image: "amigoscode/kubernetes:customer-v1"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: customer-node
  #namespace: engineering
spec:
  type: NodePort
  selector:
    app: customer
  ports:
    - port: 80 #nodeport service listen to/on port80
      targetPort: 8080
      nodePort: 30000

---

apiVersion: v1
kind: Service
metadata:
  name: customer
  #namespace: engineering
spec:
  type: ClusterIP
  selector:
    app: customer
  ports:
    - port: 80
      targetPort: 8080
