my-yamls/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployedapp
spec:
  replicas: 10
  revisionHistoryLimit: 10
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: newapp
  template:
    metadata:
      labels:
        app: newapp
      annotations:
        kubernetes.io/change-cause: "Changing to jassyboy/jassyboy/roadmapdevops:V1"
    spec:
      containers:
      - name: httpd
        image: stacksimplify/kubenginx:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: newapp
spec:
  type: NodePort
  selector:
    app: newapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30021
