my-yamls/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        environment: test
        tier: backend
        department: engineering
    spec:
      containers:
        - name: order
          image: "amigoscode/kubernetes:order-v1"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 8081
      targetPort: 8081
