my-yamls/testing-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
  - port: 8081
    targetPort: 8081
