my-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: boljibeatz.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: newapp
            port: 
              number: 80
